--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "canvas2image": "^1.0.5",
     "cesium": "^1.106.1",
+    "file-saver": "^2.0.5",
     "vue": "^3.2.47"
   },
   "devDependencies": {
